--- a/ddr_portal/Users/Templates/admin.html
+++ b/ddr_portal/Users/Templates/admin.html
@@ -60,9 +60,11 @@
         <a href="{% url 'upload_folder_list' %}"><button>Upload</button></a>
       </div>
       <div class="card">
-        <h3><i class="bi bi-pencil-square"></i> Edit File Structure</h3>
+    <h3><i class="bi bi-pencil-square"></i> Edit File Structure</h3>
+    <a href="{% url 'edit_list' %}">
         <button>Edit</button>
-      </div>
+    </a>
+</div>
       <div class="card">
         <h3><i class="bi bi-lock"></i> Change Permissions</h3>
         <a href="{% url 'assign_folder_role' %}">
