--- a/ddr_portal/Users/Templates/admin.html
+++ b/ddr_portal/Users/Templates/admin.html
@@ -76,9 +76,12 @@
         <button>Edit</button>
       </div>
       <div class="card">
-        <h3><i class="bi bi-clock-history"></i> View History</h3>
+    <h3><i class="bi bi-clock-history"></i> View History</h3>
+    <a href="{% url 'history_index' %}">
         <button>View</button>
-      </div>
+    </a>
+</div>
+
     </div>
   </div>
 
