--- a/ddr_portal/Users/Templates/faculty.html
+++ b/ddr_portal/Users/Templates/faculty.html
@@ -55,10 +55,12 @@
         <h3><i class="bi bi-upload"></i> Upload</h3>
         <a href="{% url 'upload_folder_list' %}"><button>Upload</button></a>
       </div>
-      <div class="card">
-        <h3><i class="bi bi-clock-history"></i> View History</h3>
+        <div class="card">
+    <h3><i class="bi bi-clock-history"></i> View History</h3>
+    <a href="{% url 'history_index' %}">
         <button>View</button>
-      </div>
+    </a>
+</div>
     </div>
   </div>
 
