--- a/ddr_portal/Users/Templates/head.html
+++ b/ddr_portal/Users/Templates/head.html
@@ -60,10 +60,12 @@
         <h3><i class="bi bi-pencil-square"></i> Edit File Structure</h3>
         <button>Edit</button>
       </div>
-      <div class="card">
-        <h3><i class="bi bi-clock-history"></i> View History</h3>
+        <div class="card">
+    <h3><i class="bi bi-clock-history"></i> View History</h3>
+    <a href="{% url 'history_index' %}">
         <button>View</button>
-      </div>
+    </a>
+</div>
     </div>
   </div>
 
