--- a/ddr_portal/Users/Templates/edit_dynamic_table.html
+++ b/ddr_portal/Users/Templates/edit_dynamic_table.html
@@ -237,7 +237,7 @@
                 <input type="text" name="col_name_{{ forloop.counter0 }}" value="{{ col.name }}" placeholder="Column Name" required>
                 <input type="text" name="col_type_{{ forloop.counter0 }}" value="{{ col.type }}" placeholder="Type" required>
                 <input type="text" name="col_constraints_{{ forloop.counter0 }}" value="{{ col.constraints|default:'' }}" placeholder="Constraints">
-                <button type="submit" name="remove_column" value="{{ forloop.counter0 }}" class="remove-btn",onclick="return confirm('Are you sure you want to remove this column?');">Remove</button>
+                <button type="submit" name="remove_column" value="{{ forloop.counter0 }}" class="remove-btn" onclick="return confirm('Are you sure you want to remove this column?');">Remove</button>
             </div>
         {% endfor %}
       </div>
