--- a/ddr_portal/Users/Templates/admin.html
+++ b/ddr_portal/Users/Templates/admin.html
@@ -23,7 +23,7 @@
     <ul>
       <li class="active"><i class="bi bi-house-door"></i> Dashboard</li>
       <li>
-        <a href="{% url 'folder_role_assignments' %}" style="text-decoration: none; color: inherit"><i class="bi bi-shield-lock"> View Permissions </i></a>
+        <a href="{% url 'folder_role_assignments' %}" style="text-decoration: none; color: inherit"><i class="bi bi-shield-lock"></i> View Permissions </a>
       <li>
         <a href="{% url 'profile' %}" style="text-decoration: none; color: inherit;">
           <i class="bi bi-person"></i> Profile
